pkg/cli/cmd/__snapshots__/root_test.snap

[TestExecuteShowsHelp - 1]
                    __ ______     _ __
                   / //_/ __/__ _(_) /
                  / ,< _\ \/ _ `/ / /
                 /_/|_/___/\_,_/_/_/
                                   . . .
              __/___                 :
        _____/______|             ___|____     |"\/"|
_______/_____\_______\_____     ,'        `.    \  /
\   -----       -\-\-\-    |    |  ^        \___/  |
~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~

KSail is a CLI tool for creating and maintaining local Kubernetes clusters

Usage:
  ksail [flags]
  ksail [command]

Available Commands:
  cipher      Manage encrypted files with SOPS
  cluster     Manage cluster lifecycle
  completion  Generate the autocompletion script for the specified shell
  help        Help about any command
  workload    Manage workload operations

Flags:
      --benchmark   Show per-activity benchmark output
  -h, --help        help for ksail
  -v, --version     version for ksail

Use "ksail [command] --help" for more information about a command.

---

[TestExecuteShowsHelpFlag - 1]
KSail is a CLI tool for creating and maintaining local Kubernetes clusters

Usage:
  ksail [flags]
  ksail [command]

Available Commands:
  cipher      Manage encrypted files with SOPS
  cluster     Manage cluster lifecycle
  completion  Generate the autocompletion script for the specified shell
  help        Help about any command
  workload    Manage workload operations

Flags:
      --benchmark   Show per-activity benchmark output
  -h, --help        help for ksail
  -v, --version     version for ksail

Use "ksail [command] --help" for more information about a command.

---

[TestExecuteShowsVersion - 1]
ksail version 1.2.3 (Built on 2025-08-17 from Git SHA abc123)

---

[TestExecuteWithNonexistentCommand - 1]
Error: unknown command "nonexistent" for "ksail"
Run 'ksail --help' for usage.

---
